--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet"
@@ -14,9 +14,14 @@
   <title>Art</title>
 </head>
 
+
+
 <body id="body">
-  <div id="root"></div>
+  <div id="wrapper">
+    <div id="root"></div>
+  </div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
+
 
 </html>
